--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^19.2.4",
     "@google/genai": "^1.39.0",
     "react-router-dom": "^7.13.0",
-    "lucide-react": "^0.563.0"
+    "lucide-react": "^0.563.0",
+    "vite": "^7.3.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
